# VulkanFilter

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bilateral.spv  cmake_install.cmake  comp.spv  comp1.spv  compile_commands.json  res.txt  vulkan_minimal_compute
shaders/: bilatera_image.spv  bilateral.comp  bilateral.spv  bilateral_image.comp  bilateral_image.spv  comp.spv  comp1.spv  nlm.comp  nlm.spv  nlm_image.comp  nlm_image.spv  shader.comp
src/: Bitmap.cpp  Bitmap.h  bilateral.cpp  bilateral.hpp  main.cpp  vk_utils.cpp  vk_utils.h
